--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "client": "npm start --prefix ../client",
+    "server": " nodemon server.js",
+    "start": "concurrently \"npm run client\" \"npm run server\"",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix ../client && npm run build --prefix ../client"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +21,8 @@
     "jwt-decode": "^3.1.2",
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.0"
+  },
+  "devDependencies": {
+    "concurrently": "^7.0.0"
   }
 }
