--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm start --prefix ../client",
     "server": " nodemon server.js",
-    "start": "concurrently \"npm run client\" \"npm run server\"",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix ../client && npm run build --prefix ../client"
+    "start": "concurrently \"npm run client\" \"npm run server\""
   },
   "keywords": [],
-  "author": "",
+  "author": "ahmad zughaer",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
