--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm start --prefix client",
-    "server": " nodemon server.js",
+    "server": " nodemon server.js --prefix server",
     "start": "concurrently \"npm run client\" \"npm run server\""
   },
   "repository": {
