--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "1.0.0",
   "description": "Any user with an active bank account and monthly income can register to the app, the first service will be money circles which means the user can create a money circle (kind of personal loans ) and other qualified users could join this circle.",
   "main": "index.js",
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm start --prefix client",
     "server": " nodemon server.js --prefix server/server.js",
     "start": "concurrently \"npm run client\" \"npm run server\""
-  
   },
   "repository": {
     "type": "git",
@@ -24,6 +22,7 @@
   "homepage": "https://github.com/ahmadzughaer/Money-Buddies-MERN#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
@@ -33,8 +32,8 @@
   },
   "devDependencies": {
     "concurrently": "^7.0.0"
-  }, 
+  },
   "engines": {
     "node": "16.13.0"
-    }
+  }
 }
